Fixed spacing on animations

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,8 @@ nav ul {
 }
 
 /* Home Page */
+/*  */
+
 .logo {
     width: 100px;
     
@@ -57,6 +59,18 @@ nav ul {
     margin-top: 180px;
     
 }
+#home-name {
+    font-size: 80px;
+    /* color: rgb(235, 205, 248);  */
+    color: rgb(224, 169, 248);
+}
+/* #home-title {
+    color: rgb(229, 228, 226);
+} */
+#home-description {
+    margin-top: 10px;
+    font-size: 50px;
+}
 /* ABSTRACT floating animation */
 #abstract {
     font-family: 'Indie Flower', cursive;
@@ -65,10 +79,12 @@ nav ul {
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
-    margin-left: 30px;
+    margin-left: 10px;
     margin-top: 5px;
 }
-
+#abstract-word {
+    font-size: 50px;
+}
 .floating { 
     animation-name: floating;
     animation-duration: 3s;
@@ -90,6 +106,9 @@ nav ul {
     color: rgb(229, 228, 226);
     display: flex;
     
+}
+.letter {
+    font-size: 50px;
 }
 .c {
     opacity: 0;
@@ -139,17 +158,7 @@ nav ul {
     75% {transform: translateY(-22px) scaleY(.9); opacity: 1;}
     100% {transform: translateY(0px) scaleY(1); opacity: 1;}
   }
-#home-name {
-    font-size: 80px;
-    color: rgb(235, 205, 248); 
-}
-/* #home-title {
-    color: rgb(229, 228, 226);
-} */
-#home-description {
-    margin-top: 50px;
-    font-size: 50px;
-}
+
 
 /* About Section */
 .about {
